@@ -6,6 +6,9 @@ Version 8.02 01-Mar-2010
 
 1.  The Unicode data tables have been updated to Unicode 5.2.0.
 
+2.  Added the option --libs-cpp to pcre-config, but only when C++ support is
+    configured.
+
 
 Version 8.01 19-Jan-2010
 ------------------------
